--- a/render.yaml
+++ b/render.yaml
@@ -10,7 +10,7 @@ services:
     name: finances
     runtime: python
     buildCommand: "./build.sh"
-    startCommand: "python -m gunicorn config.wsgi:application -k uvicorn.workers.UvicornWorker"
+    startCommand: "gunicorn config.wsgi:application"
     envVars:
       - key: DATABASE_URL
         fromDatabase:
@@ -20,3 +20,7 @@ services:
         generateValue: true
       - key: WEB_CONCURRENCY
         value: 4
+      - key: DJANGO_DEBUG
+        value: False
+      - key: PYTHON_VERSION
+        value: 3.11.0
