--- a/render.yaml
+++ b/render.yaml
@@ -10,7 +10,7 @@ services:
     name: finances
     runtime: python
     buildCommand: "chmod +x build.sh && ./build.sh"
-    startCommand: "gunicorn --chdir . finance_tracker.config.wsgi:application"
+    startCommand: "gunicorn finance_tracker.config.wsgi:application"
     envVars:
       - key: DATABASE_URL
         fromDatabase:
