--- a/render.yaml
+++ b/render.yaml
@@ -10,7 +10,7 @@ services:
     name: finances
     runtime: python
     buildCommand: "chmod +x build.sh && ./build.sh"
-    startCommand: "cd /opt/render/project/src && gunicorn config.wsgi:application"
+    startCommand: "gunicorn --chdir /opt/render/project/src config.wsgi:application"
     envVars:
       - key: DATABASE_URL
         fromDatabase:
